--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,10 @@ DB_NAME="krhackademy"
 DB_USER="root"
 DB_PASS=""
 DB_CHARSET="utf8mb4"
+
+MAIL_HOST="ssl0.ovh.net" 
+MAIL_USERNAME="contact@krhacken.org"
+MAIL_PASSWORD=""
+MAIL_PORT="465"
+MAIL_FROM_ADDRESS="contact@krhacken.org"
+MAIL_FROM_NAME="Support Kr[HACK]ademy"
